--- a/Platformer_WinAPI/Platformer_WinAPI.vcxproj.filters
+++ b/Platformer_WinAPI/Platformer_WinAPI.vcxproj.filters
@@ -255,6 +255,9 @@
     <ClInclude Include="CBoss02.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="CBullet_BossAtk03.h">
+      <Filter>01. Object\03. Bullet\04. Bullet04</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Platformer_WinAPI.cpp">
@@ -358,6 +361,9 @@
     </ClCompile>
     <ClCompile Include="CBoss02.cpp">
       <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="CBullet_BossAtk03.cpp">
+      <Filter>01. Object\03. Bullet\04. Bullet04</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
